-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 16
-
Component/s: hotspot
-
b02
-
x86_64
-
windows
runtime/cds/SharedBaseAddress.java
Here's a snippet from the log file:
----------System.err:(63/4301)*----------
stdout: [[0.116s][info][cds] trying to map SharedBaseAddress0.jsa
[0.116s][info][cds] Opened archive SharedBaseAddress0.jsa.
[0.116s][info][cds] Archive was created with UseCompressedOops = 0, UseCompressedClassPointers = 1
[0.116s][info][cds] full module graph: disabled because archive was created without full module graph
[0.116s][info][cds] Archive(s) were created with -XX:SharedBaseAddress=0. Always map at os-selected address.
[0.116s][info][cds] Try to map archive(s) at an alternative address
[0.117s][debug][cds] Reserved archive_space_rs [0x0000027a00000000 - 0x0000027a01000000] (16777216) bytes
[0.117s][debug][cds] Reserved class_space_rs [0x0000027a01000000 - 0x0000027a41000000] (1073741824) bytes
[0.117s][info ][cds] Commit static region #0 at base 0x0000027a00000000 top 0x0000027a00010000 (MiscCode) exec
[0.117s][info ][cds] Mapped static region #0 at base 0x0000027a00000000 top 0x0000027a00010000 (MiscCode)
[0.117s][info ][cds] Commit static region #1 at base 0x0000027a00010000 top 0x0000027a00480000 (ReadWrite)
[0.121s][info ][cds] Mapped static region #1 at base 0x0000027a00010000 top 0x0000027a00480000 (ReadWrite)
[0.121s][info ][cds] Commit static region #2 at base 0x0000027a00480000 top 0x0000027a00c10000 (ReadOnly)
[0.128s][info ][cds] Mapped static region #2 at base 0x0000027a00480000 top 0x0000027a00c10000 (ReadOnly)
[0.128s][debug][cds,reloc] runtime archive relocation start
[0.128s][debug][cds,reloc] mapped relocation bitmap @ 0x0000027a01200000 (1577449 bits)
[0.128s][debug][cds,reloc] SharedDataRelocator::_patch_base = 0x0000027a00000000
[0.128s][debug][cds,reloc] SharedDataRelocator::_patch_end = 0x0000027a00c10000
[0.128s][debug][cds,reloc] SharedDataRelocator::_valid_old_base = 0x0000000000000000
[0.128s][debug][cds,reloc] SharedDataRelocator::_valid_old_end = 0x0000000000c10000
[0.128s][debug][cds,reloc] SharedDataRelocator::_valid_new_base = 0x0000027a00000000
[0.128s][debug][cds,reloc] SharedDataRelocator::_valid_new_end = 0x0000027a00c10000
[0.139s][debug][cds,reloc] runtime archive relocation done
[0.139s][info ][cds ] optimized module handling: enabled
[0.139s][info ][cds ] full module graph: disabled
[0.140s][info ][cds ] Unmapping region #3 at base 0x0000027a01200000 (Bitmap)
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/services/virtualMemoryTracker.cpp:433
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/services/virtualMemoryTracker.cpp:433), pid=1486656, tid=409592
# assert(reserved_rgn != 0LL) failed: No reserved region
#
# JRE version: (16.0+22) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+22-1336, mixed mode, sharing, tiered, z gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\scratch\\0\\hs_err_pid1486656.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_runtime\\scratch\\0\\hs_err_pid1486656.log
#
#
Command Line: -XX:MaxRAMPercentage=3 -Djava.io.tmpdir=t:/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/tmp -XX:+CreateCoredumpOnCrash -XX:+UseZGC -XX:SharedBaseAddress=0 -Xlog:cds=debug -Xlog:cds+reloc=debug -XX:NativeMemoryTracking=detail -Xshare:on -Dtest.timeout.factor=4.0 -XX:SharedArchiveFile=SharedBaseAddress0.jsa
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000027a61d5b3e0): JavaThread "Unknown thread" [_thread_in_vm, id=409592, stack(0x000000f1cc900000,0x000000f1cca00000)]
Stack: [0x000000f1cc900000,0x000000f1cca00000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xaf00e1] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:236)
V [jvm.dll+0xd180b7] VMError::report+0xfb7 (vmError.cpp:731)
V [jvm.dll+0xd19a3e] VMError::report_and_die+0x7de (vmError.cpp:1548)
V [jvm.dll+0xd1a0f4] VMError::report_and_die+0x64 (vmError.cpp:1341)
V [jvm.dll+0x4c3ec7] report_vm_error+0x117 (debug.cpp:267)
V [jvm.dll+0xd0dcc1] VirtualMemoryTracker::add_committed_region+0x101 (virtualMemoryTracker.cpp:433)
V [jvm.dll+0xae0cb7] MemTracker::record_virtual_memory_commit+0x97 (memTracker.hpp:240)
V [jvm.dll+0xaddde0] os::commit_memory+0xb0 (os.cpp:1674)
V [jvm.dll+0xd1181d] metaspace::VirtualSpaceNode::commit_range+0x11d (virtualSpaceNode.cpp:107)
V [jvm.dll+0xa59a96] metaspace::Metachunk::commit_up_to+0x306 (metachunk.cpp:103)
V [jvm.dll+0x3ecbd1] metaspace::ChunkManager::get_chunk+0x341 (chunkManager.cpp:202)
V [jvm.dll+0xa5ef44] metaspace::MetaspaceArena::allocate+0x2d4 (metaspaceArena.cpp:288)
V [jvm.dll+0xa5c409] Metaspace::allocate+0x179 (metaspace.cpp:796)
V [jvm.dll+0xac47c8] ObjArrayKlass::allocate_objArray_klass+0x358 (objArrayKlass.cpp:121)
V [jvm.dll+0x67f390] InstanceKlass::array_klass_impl+0xf0 (instanceKlass.cpp:1452)
V [jvm.dll+0x67f261] InstanceKlass::allocate_objArray+0x61 (instanceKlass.cpp:1388)
V [jvm.dll+0xc5f3dd] SystemDictionaryShared::allocate_shared_data_arrays+0x16d (systemDictionaryShared.cpp:1104)
V [jvm.dll+0xa651b6] MetaspaceShared::post_initialize+0x26 (metaspaceShared.cpp:360)
V [jvm.dll+0xccfa96] universe_post_init+0x776 (universe.cpp:1003)
V [jvm.dll+0x67c3cf] init_globals+0xaf (init.cpp:151)
V [jvm.dll+0xc9eff1] Threads::create_vm+0x621 (thread.cpp:3579)
V [jvm.dll+0x759762] JNI_CreateJavaVM_inner+0xb2 (jni.cpp:3764)
V [jvm.dll+0x75c72f] JNI_CreateJavaVM+0x1f (jni.cpp:3847)
C [jli.dll+0x53ef] JavaMain+0x113 (java.c:416)
C [ucrtbase.dll+0x21ffa]
C [KERNEL32.DLL+0x17974]
C [ntdll.dll+0x6a271]
- duplicates
-
JDK-8256213 Remove os::split_reserved_memory
-
- Resolved
-
-
JDK-8256729 [windows] runtime/cds/SharedBaseAddress.java: assert on split_reserved_memory
-
- Closed
-
-
JDK-8253649 Potential bug in os::split_reserved_memory on windows
-
- Closed
-
- relates to
-
JDK-8263915 runtime/cds/appcds/MismatchedPathTriggerMemoryRelease.java fails when UseCompressedClassPointers is off
-
- Resolved
-
-
JDK-8255954 [windows] UseNUMAInterleaving causes VM to balloon and hang
-
- Closed
-
-
JDK-8255978 [windows] os::release_memory may not release the full range
-
- Closed
-
-
JDK-8256864 [windows] Improve tracing for mapping errors
-
- Resolved
-
-
JDK-8255973 Add more logging to debug JDK-8255917
-
- Resolved
-
-
JDK-8256079 Heterogeneous Heap may fail silently on Windows
-
- Closed
-
1.
|
Add more logging to debug JDK-8255917 |
|
Resolved | Yumin Qi |